sumo/tests/netgen/errors/grid_errors/grid_x_length__zero/errors.netgen
Error: The distance between nodes must be larger than 1m in both directions.
Quitting (on error).
